# elegant_exception

./: CMakeLists.txt  LICENSE  README.md
include/: elegant_exception.h  general_exception.h  generic_exception.h
